// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ColorPalette Dropdown should render it correctly 1`] = `null`;

exports[`ColorPalette should allow disabling custom color picker 1`] = `
<CircularOptionPicker
  actions={
    <React.Fragment>
      <ButtonAction
        onClick={[Function]}
      >
        Clear
      </ButtonAction>
    </React.Fragment>
  }
  options={
    Array [
      <Option
        aria-label="Color: red"
        isSelected={true}
        onClick={[Function]}
        style={
          Object {
            "color": "#f00",
          }
        }
        tooltipText="red"
      />,
      <Option
        aria-label="Color: white"
        isSelected={false}
        onClick={[Function]}
        style={
          Object {
            "color": "#fff",
          }
        }
        tooltipText="white"
      />,
      <Option
        aria-label="Color: blue"
        isSelected={false}
        onClick={[Function]}
        style={
          Object {
            "color": "#00f",
          }
        }
        tooltipText="blue"
      />,
    ]
  }
/>
`;

exports[`ColorPalette should render a dynamic toolbar of colors 1`] = `
<CircularOptionPicker
  actions={
    <React.Fragment>
      <DropdownLinkAction
        buttonProps={
          Object {
            "ariaLabel": "Custom color picker",
          }
        }
        dropdownProps={
          Object {
            "contentClassName": "components-color-palette__picker",
            "renderContent": [Function],
          }
        }
        linkText="Custom Color"
      />
      <ButtonAction
        onClick={[Function]}
      >
        Clear
      </ButtonAction>
    </React.Fragment>
  }
  options={
    Array [
      <Option
        aria-label="Color: red"
        isSelected={true}
        onClick={[Function]}
        style={
          Object {
            "color": "#f00",
          }
        }
        tooltipText="red"
      />,
      <Option
        aria-label="Color: white"
        isSelected={false}
        onClick={[Function]}
        style={
          Object {
            "color": "#fff",
          }
        }
        tooltipText="white"
      />,
      <Option
        aria-label="Color: blue"
        isSelected={false}
        onClick={[Function]}
        style={
          Object {
            "color": "#00f",
          }
        }
        tooltipText="blue"
      />,
    ]
  }
/>
`;
